# renderer

./: Cargo.toml  deny.toml
.cargo/: config.toml
crates/gpu/: Cargo.toml
crates/gpu/gpu-macros/: Cargo.toml
crates/gpu/src/: core.rs  lib.rs  util.rs
crates/gpu/src/vulkan/: mod.rs
crates/simd/src/: lib.rs
crates/simd/src/x86/: f32.rs  macros.rs  mask.rs  mod.rs
src/: error.rs  main.rs  shader.wgsl
src/math/: simd.rs
src/shaders/: shader.wgsl
