[package]
name = "renderer"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
glam = { version = "0.32.1", features = ["bytemuck"] }
log = "0.4.29"
thiserror = "2.0.18"
winit = { version = "0.30.13", default-features = false, features = ["rwh_06", "wayland"] }


[profile.dev]
incremental = true
